# pk200

./: .gitignore  CLEANUP_GUIDE.md  CLEANUP_SUMMARY.md  CMakeLists.txt  ESP32S3_TARGET_UPDATE_SUMMARY.md  FINAL_COMPILE_STATUS.md  FONT_CONFIGURATION_SUMMARY.md  README_ESP_IDF.md  build_simple.bat  build_test.bat  build_test.sh  cleanup_libraries.ps1  cleanup_platformio_files.bat  compile_check.md  debug_build.bat  final_compile_test.bat  final_fix_and_build.bat  fix_compile_errors.bat  partitions.csv  quick_test.bat  safe_cleanup_platformio.bat  sdkconfig  sdkconfig.defaults  sdkconfig.old  test_basic_compile.bat  vscode_build.bat
OTA-wi485/OTA/: OTA.py
components/config_manager/: CMakeLists.txt  config_manager.c
components/display_driver/: CMakeLists.txt  display_driver.c
components/lvgl/: CMakeLists.txt  lv_conf.h  lv_port_mem.c
components/my_mqtt/: CMakeLists.txt  my_mqtt.c
components/ota/: CMakeLists.txt  ota.c
components/sdstorage/: CMakeLists.txt  sdstorage.c
components/touch_driver/: CMakeLists.txt  touch_driver.c
components/wifi/: CMakeLists.txt  wifi.c
libraries/: lv_conf.h
libraries/Arduino_ESP32_OTA/: .piopm
main/: CMakeLists.txt  idf_component.yml  main.c
main/ui/: CMakeLists.txt  README.md  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
main/ui/components/: ui_comp.c  ui_comp.h  ui_comp_button.c  ui_comp_button.h  ui_comp_card.c  ui_comp_card.h  ui_comp_cardbg.c  ui_comp_cardbg.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_percent.c  ui_comp_percent.h
main/ui/fonts/: ui_font_WD18.c  ui_font_WD_28.c  ui_font_WD_48.c
main/ui/images/: OffLight.c  OnLight.c  back.c  logo.c  logohome.c  menuicon.c  phone.c  timemenu.c  ui_img_bg1_png.c  ui_img_bg2_png.c  ui_img_bg3_png.c  ui_img_bg4_png.c  ui_img_contact_png.c  ui_img_help_png.c  ui_img_left_side_png.c  ui_img_light_png.c  ui_img_ok_png.c  ui_img_phone_png.c  ui_img_pricing_png.c  ui_img_qr_code1_png.c  ui_img_s1_car_png.c  ui_img_slider_bg1_png.c  ui_img_slider_bg2_png.c  ui_img_slider_bg3_png.c  ui_img_slider_mask1_png.c  ui_img_slider_mask2_png.c  ui_img_time_png.c  ver.c
main/ui/screens/: ui_Charging.c  ui_Charging.h  ui_Connect.c  ui_Connect.h  ui_End.c  ui_End.h  ui_Home.c  ui_Home.h  ui_SC_LOGO.c  ui_SC_LOGO.h  ui_Step1.c  ui_Step1.h  ui_Step2.c  ui_Step2.h  ui_Welcome.c  ui_Welcome.h  ui_menu.c  ui_menu.h  ui_ver.c  ui_ver.h
(+22 files in other folders)
