SET(SOURCES components/ui_comp_button.c
    components/ui_comp_card.c
    components/ui_comp_cardbg.c
    components/ui_comp_percent.c
    components/ui_comp.c
    fonts/ui_font_WD_28.c
    fonts/ui_font_WD_48.c
    fonts/ui_font_WD_18.c
    screens/ui_SC_LOGO.c
    screens/ui_Home.c
    screens/ui_Step1.c
    screens/ui_Step2.c
    screens/ui_Connect.c
    screens/ui_Welcome.c
    screens/ui_Charging.c
    screens/ui_End.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    images/logo.c
    images/back.c
    images/menuicon.c
    images/OffLight.c
    images/OnLight.c
    images/logohome.c
    images/phone.c
    images/ui_img_bg1_png.c
    images/ui_img_left_side_png.c
    images/ui_img_pricing_png.c
    images/ui_img_help_png.c
    images/ui_img_contact_png.c
    images/ui_img_s1_car_png.c
    images/ui_img_bg2_png.c
    images/ui_img_light_png.c
    images/ui_img_bg4_png.c
    images/ui_img_phone_png.c
    images/ui_img_qr_code1_png.c
    images/ui_img_bg3_png.c
    images/ui_img_time_png.c
    images/ui_img_ok_png.c
    images/ui_img_slider_bg2_png.c
    images/ui_img_slider_bg3_png.c
    images/ui_img_slider_bg1_png.c
    images/ui_img_slider_mask2_png.c
    images/ui_img_slider_mask1_png.c)

add_library(ui ${SOURCES})
